--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moment-timezone-utils",
-  "version": "0.0.1",
+  "name": "@divvit/moment-timezone-utils",
+  "version": "1.0.0",
   "description": "Utility functions for moment-timezone.",
   "main": "index.js",
   "scripts": {
